app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progressive-delivery
  labels:
    app: progressive-delivery
spec:
  replicas: 3
  selector:
    matchLabels:
      app: progressive-delivery
  template:
    metadata:
      labels:
        app: progressive-delivery
    spec:
      containers:
        - name: app
          image: 609176022576.dkr.ecr.us-east-2.amazonaws.com/progressive-delivery:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
