app/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: progressive-delivery
  labels:
    app: progressive-delivery
spec:
  replicas: 10          # 10 replicas makes weight math exact (10%=1 pod, 25%=2-3, 50%=5)
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: progressive-delivery
  template:
    metadata:
      labels:
        app: progressive-delivery
    spec:
      containers:
        - name: app
          image: 609176022576.dkr.ecr.us-east-2.amazonaws.com/progressive-delivery:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: { duration: 60s }
        - setWeight: 25
        - pause: { duration: 60s }
        - setWeight: 50
        - pause: { duration: 60s }
        - setWeight: 100
