app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: progressive-delivery
  labels:
    app: progressive-delivery
spec:
  selector:
    app: progressive-delivery
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
